Backport various styling fixes (#11619)
* Fix inconsistent font size for markdown preview on new PR view (#11565)

We use same method for new issue form and issue view, but was missing from new PR view making it one place where markdown preview is inconsistent in font size.

(cherry picked from commit 04afd9d1e2399d61978fdeeab7e7ac8ff9057a93)

* Fix margin on PR form (#11566)

(cherry picked from commit f2a0be1683daf3330a7c94fa65300e7056e9bc98)

* Fix margin for attached top header on code review (#11571)

Introduced naively by #11463

The margin was being applied too widely.

(cherry picked from commit e682a922957ebb1d40843be4da902fe13b15adde)

* Fix styling for PR merge section when no checks (#11609)

Makes styling consistent between two cases. Also removed unnecessary double border.

* Normalize avatar radius

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -576,7 +576,12 @@ code,
         font-weight: normal;
     }
 
-    .avatar.image {
+    .avatar.image,
+    .avatar.image img,
+    .avatar.image svg,
+    .avatar.images .image,
+    .avatar.images img,
+    .avatar.images svg {
         border-radius: 3px;
     }
 
